fixed issue with some palettes not showing

--- a/delta/main.css
+++ b/delta/main.css
@@ -91,7 +91,6 @@ body {
     font-size: 2vw;
     background: var(--bg);
     color: var(--col);
-    transition: background 0.4s, color 0.4s;
 }
 
 .pos-down {
